k8s/console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  namespace: vibeweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
        - name: console
          image: k3d-vibeweb-registry:5050/vibeweb-console:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: vibeweb
spec:
  selector:
    app: console
  ports:
    - port: 80
      targetPort: 80
